static/css/main.css
/* ... */
.apilos-colored_status--A_signer {
  background-color: #FEEDD1;
}

.apilos-colored_status--Signee {
  background-color: #D4F4E1;
}
.apilos-colored_status--Resiliee {
  background-color: #E2E2E2;
}

/*
 * End display convention status
 */

/*
 * Adapt button color when it is a link 'a'
 */

.fr-btn:hover {
  color:white;
  text-decoration: none;
}

.fr-btn--secondary:hover {
  color:#000091!important;
  text-decoration: none;
}

.fr-header__tools-links .fr-btn:hover {
  color:#000091!important;
}

/*
 * End Adapt button color when it is a link 'a'
 */

.apilos-input-group--inline {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.apilos-form-label--strike {
  text-decoration: line-through;
}

.apilos-sticky-top {
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
  z-index: 10000;
}

/*
 * SIAP
 */

.apilos-active-habilitation {
  background-color: pink;
}


.apilos-links-group {
  justify-content: flex-end;
  width: calc(100% + 1rem);
  --ul-type: none;
  --ol-type: none;
  --ul-start: 0;
  --ol-start: 0;
  --xl-block: 0;
  --li-bottom: 0;
  --ol-content: none;
  align-items: stretch;
  display: flex;
  flex-wrap: wrap;
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 0;
}
#cgu .fr-table {
  background-color: #fff;
}

